Fix for WK-57: Prevent scrollbars from appearing in nested tables

--- a/src/main/webapp/css/styles-03d-fixed-pixel.less
+++ b/src/main/webapp/css/styles-03d-fixed-pixel.less
@@ -201,16 +201,16 @@ body
 // scroll separately from the headings.
 //
 .table-data-container {
-    max-height: @max-top-table-height;
-    overflow-y: scroll;
+   // max-height: @max-top-table-height;
+   // overflow-y: scroll;
     color: @value-color;
 }
 
 // Nested tables are smaller.
 //
 .table-data-container .table-data-container {
-    max-height: @max-nested-table-height;
-    overflow-y: scroll;
+  //  max-height: @max-nested-table-height;
+  //  overflow-y: scroll;
 }
 
 .table-data-container > .wk-table > tbody >tr:last-child {
